fix quest log flickering and add checkmark icon

--- a/style.scss
+++ b/style.scss
@@ -448,22 +448,30 @@ body {
   text-align: left;
   padding: 20px;
   color: #fff;
-  margin-top: 20px;
+  margin: 20px 0;
+}
+
+.questLogEntry {
+  background: $orange;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 10px;
+  font-size: 14px;
 }
 
 .questLogName {
-  background: $orange;
-  padding: 20px;
-  border-radius: 5px;
+  margin-left: 20px;
 }
 
-.questLogName:hover + .questLogDescription {
+.questLogEntry:hover .questLogDescription {
   display: block;
 }
 
 .questLogDescription {
   display: none;
-  padding: 20px;
+  padding: 5px;
+  font-size: 12px;
+  margin-left: 20px;
 }
 
 .inventory {
@@ -476,8 +484,8 @@ body {
 
 .inventory > div {
   position: relative;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   border: solid 3px #404040;
 }
 
